--- a/Movies.WebApp/Views/Movie/Detail.cshtml
+++ b/Movies.WebApp/Views/Movie/Detail.cshtml
@@ -87,16 +87,16 @@
                     </button>
 
                     <div class="title-wrapper">
-                        <p class="title">Prime Video</p>
+                        <p class="title">Thuê phim</p>
 
-                        <p class="text">Streaming Channels</p>
+                        <p class="text">Chỉ @Model.RentalPrice cho 7 ngày</p>
                     </div>
 
 
                     <a class="btn btn-primary" asp-action="CheckOut" asp-controller="Bill" asp-route-mId="@Model.Id">
                         <ion-icon name="play"></ion-icon>
 
-                        <span>Thuê ngay</span>
+                        <span>Xem ngay</span>
                     </a>
 
 
