--- a/Movies.WebApp/Views/Bill/MyBill.cshtml
+++ b/Movies.WebApp/Views/Bill/MyBill.cshtml
@@ -4,75 +4,89 @@
     ViewData["Title"] = "MyBill";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+<div class="text-light bg-dark">
 
-<h1 class="text-center">Danh sách phim đã thuê</h1>
+    <h1 class="text-center pt-5 pb-5 ">Danh sách phim đã thuê</h1>
 
-<div class="d-flex justify-content-center p-4">
+    <div class="d-flex justify-content-center p-4">
 
-    <table class="table">
-        <thead>
-            <tr>
-                <th class="d-none">
-                    @Html.DisplayNameFor(model => model.RentalId)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.MovieName)
-                </th>
-                <th class="d-none">
-                    @Html.DisplayNameFor(model => model.UserName)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.RentalDate)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.ReturnDate)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Status)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Price)
-                </th>
-                <th>Hành động</th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var item in Model)
-            {
+        <table class="table text-light">
+            <thead>
                 <tr>
-                    <td class="d-none">
-                        @Html.DisplayFor(modelItem => item.RentalId)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.MovieName)
-                    </td>
-                    <td class="d-none">
-                        @Html.DisplayFor(modelItem => item.UserName)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.RentalDate)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.ReturnDate)
-                    </td>
-                    <td>
-                        @if (item.Status == true)
-                        {
-                            <span class="badge bg-success">Khả dụng</span>
-                        }
-                        else
-                        {
-                            <span class="badge bg-danger">Đã hết hạn</span>
-                        }
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Price)
-                    </td>
-                    <td>
-                      <a class="btn btn-warning">Xem ngay</a>
-                    </td>
+                    <th class="d-none">
+                        @Html.DisplayNameFor(model => model.RentalId)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.MovieName)
+                    </th>
+                    <th class="d-none">
+                        @Html.DisplayNameFor(model => model.UserName)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.RentalDate)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.ReturnDate)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Status)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Price)
+                    </th>
+                    <th>Hành động</th>
                 </tr>
-            }
-        </tbody>
-    </table>
+            </thead>
+            <tbody>
+                @foreach (var item in Model)
+                {
+                    <tr>
+                        <td class="d-none">
+                            @Html.DisplayFor(modelItem => item.RentalId)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.MovieName)
+                        </td>
+                        <td class="d-none">
+                            @Html.DisplayFor(modelItem => item.UserName)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.RentalDate)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.ReturnDate)
+                        </td>
+                        <td>
+                            @if (item.Status == true)
+                            {
+                                <span class="badge bg-success">Khả dụng</span>
+                            }
+                            else
+                            {
+                                <span class="badge bg-danger">Đã hết hạn</span>
+                            }
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Price)
+                        </td>
+                        <td>
+
+
+                            @if (item.Status == true)
+                            {
+                                <a class="btn btn-warning" asp-action="WatchMovie" asp-controller="Movie" asp-route-id="@item.MovieId">Xem ngay</a>
+                            }
+                            else
+                            {
+                                <a asp-action="CheckOut" asp-controller="Bill" asp-route-mId="@item.MovieId" class="btn btn-danger">Thuê lại</a>
+                            }
+
+
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    </div>
+
 </div>
