--- a/Movies.WebApp/Views/Bill/PaymentCanceled.cshtml
+++ b/Movies.WebApp/Views/Bill/PaymentCanceled.cshtml
@@ -3,6 +3,6 @@
         <h3 class="text-light">Bạn đã HUỶ thanh toán</h3>
     </div>
     <div class="pt-3 mb-3">
-        <a class="btn btn-warning">Về trang chủ</a>
+        <a class="btn btn-warning" asp-action="Index" asp-controller="Home">Về trang chủ</a>
     </div>
-</div>
+</div> 
